--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,16 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
 
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    buildToolsVersion = "25.0.2"
 }
 
 allprojects {
