--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /build
 /captures
 .externalNativeBuild
+.idea/markdown-navigator.xml
+.idea/misc.xml
+.idea/markdown-navigator/profiles_settings.xml
